--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="registration_done_text">Registration done</string>
     <string name="payment_not_made_text">Payment not made</string>
     <string name="payment_made_text">Payment made</string>
+    <string name="drimk_view_summary_tip">TOT</string>
 </resources>
