aggiunti bottoni per aumentare e diminuire la quantità del drink associato e aggiunta logica dei filtri (tutto da sistemare)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="drimk_view_summary_tip">TOT:</string>
     <string name="registerNameHint">Name</string>
     <string name="registerSurnameHint">Surname</string>
+    <string name="image_of_the_drink">image of the drink</string>
 </resources>
