--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="card_expiration">Scadenza carta</string>
     <string name="name">Nome</string>
     <string name="select_month">Seleziona il mese\n</string>
+    <string name="switch_change_modality">Attiva la modalità colori ad alto contrasto</string>
 </resources>
